Fix prfile pic z-index

--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -9,6 +9,7 @@
 
 #home img {
     filter: grayscale(60%);
+    z-index: -1;
     width: 150px;
     border-radius: 100%;
     box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.60);
